[package]
name = "tortus-exe-github-io"
version = "0.1.0"
authors = ["Tortus-exe <65506144+Tortus-exe@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.52.0"
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-markdown = "0.0.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo-net = { version = "0.6.0", features = ["http"] }
phf = { version = "0.13.1", features = ["macros"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
# RUSTFLAGS='--cfg getrandom_backend="wasm_js"'

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
